--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Todo</title>
+    <title>TODO APP IN JAVA SCRIPT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
       rel="stylesheet"
     />
     <link
@@ -20,13 +19,11 @@
   <body>
     <div id="single-task-modal" class="single-task-modal">
       <div class="topBar">
-        <button onclick="ToggleSingelTaskModal()"  style="background-color: black;border: black;"> <span style="color: blue;font-weight: bolder;font-size: 50px;"><-</span> <span style="color: rgb(244, 244, 249);font-weight: bolder;font-size: 30px;">Back</span> </button>
+        <button onclick="ToggleSingelTaskModal()"  style="background-color: black;border: black;"> <span style="color: blue;font-weight: bolder;font-size: 50px;"><-</span> <span style="color: rgb(244, 244, 249);font-weight: bolder;font-size: 30px;" id="back-button-of-single-page">Back</span> </button>
        
         <h1 id="single-task-name"></h1>
-        <!-- <div id="box"></div> -->
-        <!-- <button class="second-screen-button"> Add New</button> -->
-        <button style="background-color: black;border: black;"> <span style="color: blue;font-weight: bolder;font-size: 50px;">+</span><span style="color: rgb(245, 245, 248);font-weight: bolder;font-size: 30px;"> Add New</span> </button>
-        <div id="box"></div>
+       <button style="background-color: black;border: black;"> <span style="color: blue;font-weight: bolder;font-size: 50px;">+</span><span style="color: rgb(245, 245, 248);font-weight: bolder;font-size: 30px;" id="add-button-of-single-page"> Add New</span> </button>
+      <div id="box"></div>
       </div>
     </div>
 
